syntax = "proto3";

package rpc.product;
option go_package = "github.com/khanhduyy/shopms-product/rpc/product";

import "google/api/annotations.proto";

service ProductAPI {
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {
        option (google.api.http) = {
            get: "/api/products"
        };
    };   
}

message Product {
    int64 id = 1;
    string name = 2;
    string description = 3;
    int64 quantity = 4;
    float price = 5;
}

message GetProductsRequest{
    int64 limit = 1;
    int64 offset = 2;
}

message GetProductsResponse {
    repeated Product products = 1;
}

message CreateProductRequest {
    repeated Product products = 1;
}

message CreateProductResponse {
    repeated int64 productIds = 1;
}

message UpdateProductRequest {
    
}

